tests/snapshots/run_subcommand_test__run_all_passing_stdout.snap
---
source: tests/run_subcommand_test.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
PASS. Expected tests/data/empty_file.txt file.exists eq true, got true
PASS. Expected tests/data/empty_file.txt file.exists ne false, got true
PASS. Expected tests/data/size_5B.txt file.exists eq true, got true
PASS. Expected tests/data/size_1K.txt file.exists eq true, got true
PASS. Expected tests/data/does_not_exist.txt file.exists eq false, got false
PASS. Expected tests/data/does_not_exist.txt file.exists ne true, got false
PASS. Expected tests/data/empty_file.txt file.empty eq true, got true
PASS. Expected tests/data/empty_file.txt file.empty ne false, got true
PASS. Expected tests/data/size_5B.txt file.empty eq false, got false
PASS. Expected tests/data/size_5B.txt file.empty ne true, got false
PASS. Expected tests/data/size_1K.txt file.empty eq false, got false
PASS. Expected tests/data/empty_file.txt file.size eq 0B, got 0B
PASS. Expected tests/data/empty_file.txt file.size ne 1B, got 0B
PASS. Expected tests/data/empty_file.txt file.size lt 1B, got 0B
PASS. Expected tests/data/empty_file.txt file.size lte 0B, got 0B
PASS. Expected tests/data/empty_file.txt file.size gte 0B, got 0B
PASS. Expected tests/data/size_5B.txt file.size eq 5B, got 5B
PASS. Expected tests/data/size_5B.txt file.size eq 5b, got 5B
PASS. Expected tests/data/size_5B.txt file.size ne 4B, got 5B
PASS. Expected tests/data/size_5B.txt file.size lt 6B, got 5B
PASS. Expected tests/data/size_5B.txt file.size lte 5B, got 5B
PASS. Expected tests/data/size_5B.txt file.size gt 4B, got 5B
PASS. Expected tests/data/size_5B.txt file.size gte 5B, got 5B
PASS. Expected tests/data/size_1K.txt file.size eq 1024B, got 1.00KB
PASS. Expected tests/data/size_1K.txt file.size eq 1KB, got 1.00KB
PASS. Expected tests/data/size_1K.txt file.size eq 1kb, got 1.00KB
PASS. Expected tests/data/size_1K.txt file.size ne 1023B, got 1.00KB
PASS. Expected tests/data/size_1K.txt file.size lt 2KB, got 1.00KB
PASS. Expected tests/data/size_1K.txt file.size lte 1KB, got 1.00KB
PASS. Expected tests/data/size_1K.txt file.size gt 500B, got 1.00KB
PASS. Expected tests/data/size_1K.txt file.size gte 1024B, got 1.00KB
PASS. Expected tests/data/empty_file.txt file.lines eq 0, got 0
PASS. Expected tests/data/empty_file.txt file.lines ne 1, got 0
PASS. Expected tests/data/empty_file.txt file.lines lt 1, got 0
PASS. Expected tests/data/empty_file.txt file.lines lte 0, got 0
PASS. Expected tests/data/empty_file.txt file.lines gte 0, got 0
PASS. Expected tests/data/size_5B.txt file.lines eq 1, got 1
PASS. Expected tests/data/size_5B.txt file.lines gt 0, got 1
PASS. Expected tests/data/lines_1.txt file.lines eq 1, got 1
PASS. Expected tests/data/lines_10.txt file.lines eq 10, got 10
PASS. Expected tests/data/lines_10.txt file.lines ne 9, got 10
PASS. Expected tests/data/lines_10.txt file.lines lt 11, got 10
PASS. Expected tests/data/lines_10.txt file.lines lte 10, got 10
PASS. Expected tests/data/lines_10.txt file.lines gt 9, got 10
PASS. Expected tests/data/lines_10.txt file.lines gte 10, got 10
PASS. Expected tests/data/lines_100.txt file.lines eq 100, got 100
PASS. Expected tests/data/lines_100.txt file.lines lt 101, got 100
PASS. Expected tests/data/lines_100.txt file.lines gt 99, got 100
PASS. Expected tests/data/size_5B.txt file.contents eq hello, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents ne world, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents starts he, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents ends lo, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents contains ell, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents matches '^h.*o$', got 5 bytes
PASS. Expected tests/data/clean_log.txt file.contents contains completed, got 125 bytes
PASS. Expected tests/data/clean_log.txt file.contents matches Trimmomatic, got 125 bytes
PASS. Expected tests/data/example.csv csv.columns.count eq 3, got 3
PASS. Expected tests/data/example.csv csv.columns.count ne 2, got 3
PASS. Expected tests/data/example.csv csv.columns.count gt 2, got 3
PASS. Expected tests/data/example.csv csv.columns.count gte 3, got 3
PASS. Expected tests/data/example.csv csv.columns.count lt 4, got 3
PASS. Expected tests/data/example.csv csv.columns.count lte 3, got 3
PASS. Expected tests/data/example.csv csv.lines.count eq 3, got 3
PASS. Expected tests/data/example.csv csv.lines.count ne 2, got 3
PASS. Expected tests/data/example.csv csv.lines.count gt 2, got 3
PASS. Expected tests/data/example.csv csv.lines.count gte 3, got 3
PASS. Expected tests/data/example.csv csv.lines.count lt 4, got 3
PASS. Expected tests/data/example.csv csv.lines.count lte 3, got 3
PASS. Expected tests/data/example.csv csv.line.1.column.1 eq name, got name
PASS. Expected tests/data/example.csv csv.line.1.column.2 eq age, got age
PASS. Expected tests/data/example.csv csv.line.1.column.3 eq city, got city
PASS. Expected tests/data/example.csv csv.line.2.column.1 eq Alice, got Alice
PASS. Expected tests/data/example.csv csv.line.2.column.2 eq 30, got 30
PASS. Expected tests/data/example.csv csv.line.2.column.3 eq "New York", got New York
PASS. Expected tests/data/example.csv csv.line.3.column.1 eq Bob, got Bob
PASS. Expected tests/data/example.csv csv.line.3.column.3 eq "Los Angeles", got Los Angeles
PASS. Expected tests/data/example.csv csv.line.2.column.1 ne Bob, got Alice
PASS. Expected tests/data/example.csv csv.line.2.column.1 starts A, got Alice
PASS. Expected tests/data/example.csv csv.line.2.column.1 ends e, got Alice
PASS. Expected tests/data/example.csv csv.line.2.column.1 contains lic, got Alice
PASS. Expected tests/data/example.csv csv.line.2.column.1 matches '^A.*e$', got Alice
PASS. Expected tests/data/example.csv csv.line.3.column.3 contains Angeles, got Los Angeles
PASS. Expected tests/data/example.tsv tsv.columns.count eq 3, got 3
PASS. Expected tests/data/example.tsv tsv.columns.count ne 2, got 3
PASS. Expected tests/data/example.tsv tsv.columns.count gt 2, got 3
PASS. Expected tests/data/example.tsv tsv.columns.count gte 3, got 3
PASS. Expected tests/data/example.tsv tsv.columns.count lt 4, got 3
PASS. Expected tests/data/example.tsv tsv.columns.count lte 3, got 3
PASS. Expected tests/data/example.tsv tsv.lines.count eq 3, got 3
PASS. Expected tests/data/example.tsv tsv.lines.count gt 2, got 3
PASS. Expected tests/data/example.tsv tsv.lines.count lt 4, got 3
PASS. Expected tests/data/example.tsv tsv.line.1.column.1 eq name, got name
PASS. Expected tests/data/example.tsv tsv.line.1.column.2 eq age, got age
PASS. Expected tests/data/example.tsv tsv.line.1.column.3 eq city, got city
PASS. Expected tests/data/example.tsv tsv.line.2.column.1 eq Alice, got Alice
PASS. Expected tests/data/example.tsv tsv.line.3.column.3 eq "Los Angeles", got Los Angeles
PASS. Expected tests/data/example.tsv tsv.line.2.column.1 ne Bob, got Alice
PASS. Expected tests/data/example.tsv tsv.line.2.column.1 starts A, got Alice
PASS. Expected tests/data/example.tsv tsv.line.2.column.1 contains lic, got Alice
PASS. Expected tests/data/example.tsv tsv.line.2.column.1 ends e, got Alice
PASS. Expected tests/data/example.tsv tsv.line.2.column.1 matches '^A.*e$', got Alice
PASS. Expected tests/data/example.psv psv.columns.count eq 3, got 3
PASS. Expected tests/data/example.psv psv.columns.count ne 2, got 3
PASS. Expected tests/data/example.psv psv.columns.count gt 2, got 3
PASS. Expected tests/data/example.psv psv.columns.count gte 3, got 3
PASS. Expected tests/data/example.psv psv.columns.count lt 4, got 3
PASS. Expected tests/data/example.psv psv.columns.count lte 3, got 3
PASS. Expected tests/data/example.psv psv.lines.count eq 3, got 3
PASS. Expected tests/data/example.psv psv.lines.count gt 2, got 3
PASS. Expected tests/data/example.psv psv.lines.count lt 4, got 3
PASS. Expected tests/data/example.psv psv.line.1.column.1 eq name, got name
PASS. Expected tests/data/example.psv psv.line.1.column.2 eq age, got age
PASS. Expected tests/data/example.psv psv.line.1.column.3 eq city, got city
PASS. Expected tests/data/example.psv psv.line.2.column.1 eq Alice, got Alice
PASS. Expected tests/data/example.psv psv.line.3.column.3 eq "Los Angeles", got Los Angeles
PASS. Expected tests/data/example.psv psv.line.2.column.1 ne Bob, got Alice
PASS. Expected tests/data/example.psv psv.line.2.column.1 starts A, got Alice
PASS. Expected tests/data/example.psv psv.line.2.column.1 contains lic, got Alice
PASS. Expected tests/data/example.psv psv.line.2.column.1 ends e, got Alice
PASS. Expected tests/data/example.psv psv.line.2.column.1 matches '^A.*e$', got Alice
PASS. Expected tests/data/example.csv csv.column.2.data.all matches '^[0-9]+$', got 2 rows checked
PASS. Expected tests/data/example.csv csv.column.1.data.all matches '^[A-Z][a-z]+$', got 2 rows checked
PASS. Expected tests/data/example.csv csv.column.1.all matches '^[A-Za-z]+$', got 3 rows checked
PASS. Expected tests/data/example.tsv tsv.column.2.data.all matches '^[0-9]+$', got 2 rows checked
PASS. Expected tests/data/example.tsv tsv.column.1.all matches '^[A-Za-z]+$', got 3 rows checked
PASS. Expected tests/data/example.psv psv.column.2.data.all matches '^[0-9]+$', got 2 rows checked
PASS. Expected tests/data/example.psv psv.column.1.all matches '^[A-Za-z]+$', got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.6.data.all matches '^[+-]$', got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.1.data.all matches '^chr[0-9]+$', got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.1.data.all starts chr, got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.4.data.all contains JUNC, got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.4.data.all ne chrom, got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.10.data.all eq 2, got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.10.data.all ends 2, got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.12.data.all matches '^[01]$', got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.1.all matches chr, got 4 rows checked
PASS. Expected tests/data/sample.bam bam.header.rg.count eq 2, got 2
PASS. Expected tests/data/sample.bam bam.header.rg.count ne 0, got 2
PASS. Expected tests/data/sample.bam bam.header.rg.count gt 1, got 2
PASS. Expected tests/data/sample.bam bam.header.rg.count gte 1, got 2
PASS. Expected tests/data/sample.bam bam.header.rg.count lt 3, got 2
PASS. Expected tests/data/sample.bam bam.header.rg.count lte 2, got 2
PASS. Expected tests/data/sample.bam bam.header.sq.count eq 1, got 1
PASS. Expected tests/data/sample.bam bam.header.sq.count gte 1, got 1
PASS. Expected tests/data/sample.bam bam.header.sq.count lt 2, got 1
PASS. Expected tests/data/sample.bam bam.header.pg.count eq 1, got 1
PASS. Expected tests/data/sample.bam bam.header.pg.count ne 0, got 1
PASS. Expected tests/data/sample.bam bam.header.rg.0.id eq 'H0164.1', got H0164.1
PASS. Expected tests/data/sample.bam bam.header.rg.1.id eq 'H0164.2', got H0164.2
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm eq NA12878, got NA12878
PASS. Expected tests/data/sample.bam bam.header.rg.1.sm eq NA12878, got NA12878
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm ne NA12891, got NA12878
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm starts NA, got NA12878
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm ends 878, got NA12878
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm contains 128, got NA12878
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm matches '^NA[0-9]+$', got NA12878
PASS. Expected tests/data/sample.bam bam.header.rg.0.pl eq ILLUMINA, got ILLUMINA
PASS. Expected tests/data/sample.bam bam.header.rg.0.pl contains LUM, got ILLUMINA
PASS. Expected tests/data/sample.bam bam.header.rg.0.pl matches '^ILL.*A$', got ILLUMINA
PASS. Expected tests/data/sample.bam bam.header.rg.0.lb eq 'Solexa-272222', got Solexa-272222
PASS. Expected tests/data/sample.bam bam.header.rg.0.lb starts Solexa, got Solexa-272222
PASS. Expected tests/data/sample.bam bam.header.rg.0.pu eq 'H0164ALXX140820.1', got H0164ALXX140820.1
PASS. Expected tests/data/sample.bam bam.header.rg.0.pu ends '.1', got H0164ALXX140820.1
PASS. Expected tests/data/sample.bam bam.header.rg.1.pu eq 'H0164ALXX140820.2', got H0164ALXX140820.2
PASS. Expected tests/data/sample.bam bam.header.rg.0.present eq true, got true
PASS. Expected tests/data/sample.bam bam.header.rg.1.present eq true, got true
PASS. Expected tests/data/sample.bam bam.header.rg.2.present eq false, got false
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm.present eq true, got true
PASS. Expected tests/data/sample.bam bam.header.rg.0.pu.present eq true, got true
PASS. Expected tests/data/sample.bam bam.header.rg.0.dt.present eq false, got false
PASS. Expected tests/data/sample.bam bam.header.rg.0.cn.present eq false, got false
PASS. Expected tests/data/sample.bam bam.header.hd.vn eq '1.6', got 1.6
PASS. Expected tests/data/sample.bam bam.header.hd.so eq coordinate, got coordinate
PASS. Expected tests/data/sample.bam bam.header.hd.so ne queryname, got coordinate
PASS. Expected tests/data/sample.fasta fasta.seq.count eq 3, got 3
PASS. Expected tests/data/sample.fasta fasta.seq.count ne 0, got 3
PASS. Expected tests/data/sample.fasta fasta.seq.count gt 0, got 3
PASS. Expected tests/data/sample.fasta fasta.seq.count gte 1, got 3
PASS. Expected tests/data/sample.fasta fasta.seq.count lt 10, got 3
PASS. Expected tests/data/sample.fasta fasta.seq.count lte 3, got 3
PASS. Expected tests/data/sample.fasta fasta.length eq 42, got 42
PASS. Expected tests/data/sample.fasta fasta.length ne 0, got 42
PASS. Expected tests/data/sample.fasta fasta.length gt 41, got 42
PASS. Expected tests/data/sample.fasta fasta.length gte 40, got 42
PASS. Expected tests/data/sample.fasta fasta.length lt 43, got 42
PASS. Expected tests/data/sample.fasta fasta.length lte 42, got 42
PASS. Expected tests/data/sample.fasta fasta.seq.0.name eq chr1, got chr1
PASS. Expected tests/data/sample.fasta fasta.seq.1.name eq chr2, got chr2
PASS. Expected tests/data/sample.fasta fasta.seq.2.name eq 'NC_000001.11', got NC_000001.11
PASS. Expected tests/data/sample.fasta fasta.seq.0.name ne chr2, got chr1
PASS. Expected tests/data/sample.fasta fasta.seq.0.name starts ch, got chr1
PASS. Expected tests/data/sample.fasta fasta.seq.0.name ends 1, got chr1
PASS. Expected tests/data/sample.fasta fasta.seq.0.name contains chr, got chr1
PASS. Expected tests/data/sample.fasta fasta.seq.0.name matches '^chr[0-9]+$', got chr1
PASS. Expected tests/data/sample.fasta fasta.seq.2.name matches '^NC_[0-9]+\.[0-9]+$', got NC_000001.11
PASS. Expected tests/data/sample.fasta fasta.seq.0.description eq 'Homo sapiens chromosome 1', got Homo sapiens chromosome 1
PASS. Expected tests/data/sample.fasta fasta.seq.0.description starts Homo, got Homo sapiens chromosome 1
PASS. Expected tests/data/sample.fasta fasta.seq.0.description contains sapiens, got Homo sapiens chromosome 1
PASS. Expected tests/data/sample.fasta fasta.seq.2.description eq 'alternate assembly', got alternate assembly
PASS. Expected tests/data/sample.fasta fasta.seq.0.length eq 28, got 28
PASS. Expected tests/data/sample.fasta fasta.seq.0.length ne 0, got 28
PASS. Expected tests/data/sample.fasta fasta.seq.0.length gt 27, got 28
PASS. Expected tests/data/sample.fasta fasta.seq.0.length gte 20, got 28
PASS. Expected tests/data/sample.fasta fasta.seq.0.length lt 29, got 28
PASS. Expected tests/data/sample.fasta fasta.seq.0.length lte 28, got 28
PASS. Expected tests/data/sample.fasta fasta.seq.1.length eq 10, got 10
PASS. Expected tests/data/sample.fasta fasta.seq.2.length eq 4, got 4
PASS. Expected tests/data/sample.fasta fasta.seq.0.present eq true, got true
PASS. Expected tests/data/sample.fasta fasta.seq.2.present eq true, got true
PASS. Expected tests/data/sample.fasta fasta.seq.3.present eq false, got false
PASS. Expected tests/data/sample.fasta fasta.seq.0.description.present eq true, got true
PASS. Expected tests/data/sample.fasta fasta.seq.1.description.present eq false, got false
PASS. Expected tests/data/empty.fasta fasta.seq.count eq 0, got 0
PASS. Expected tests/data/empty.fasta fasta.seq.count lt 1, got 0
PASS. Expected tests/data/empty.fasta fasta.seq.count lte 0, got 0
PASS. Expected tests/data/empty.fasta fasta.length eq 0, got 0
PASS. Expected 'abc' text.value eq abc, got abc
PASS. Expected 'abc' text.value ne xyz, got abc
PASS. Expected 'abc' text.value starts a, got abc
PASS. Expected 'abc' text.value ends c, got abc
PASS. Expected 'abc' text.value contains b, got abc
PASS. Expected 'abc' text.value matches '^a.*c$', got abc
PASS. Expected 'NC_000001.11' text.value eq 'NC_000001.11', got NC_000001.11
PASS. Expected 'NC_000001.11' text.value matches '^NC_[0-9]+\.[0-9]+$', got NC_000001.11
PASS. Expected 'Homo sapiens chromosome 1' text.value contains sapiens, got Homo sapiens chromosome 1
PASS. Expected 'abc' text.length eq 3, got 3
PASS. Expected 'abc' text.length ne 2, got 3
PASS. Expected 'abc' text.length lt 4, got 3
PASS. Expected 'abc' text.length lte 3, got 3
PASS. Expected 'abc' text.length gt 2, got 3
PASS. Expected 'abc' text.length gte 3, got 3
PASS. Expected 'café' text.length eq 4, got 4
PASS. Expected '' text.length eq 0, got 0
PASS. Expected tests/data/size_5B.txt file.contents not contains xyz, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents not starts zz, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents not ends zz, got 5 bytes
PASS. Expected tests/data/size_5B.txt file.contents not matches '^z', got 5 bytes
PASS. Expected tests/data/clean_log.txt file.contents not contains 'Exception', got 125 bytes
PASS. Expected tests/data/clean_log.txt file.contents not matches 'ERROR|FATAL', got 125 bytes
PASS. Expected tests/data/example.csv csv.line.2.column.1 not eq Bob, got Alice
PASS. Expected tests/data/example.csv csv.line.2.column.1 not starts B, got Alice
PASS. Expected tests/data/example.csv csv.line.2.column.1 not contains xyz, got Alice
PASS. Expected tests/data/junctions.tsv tsv.column.6.data.all not contains N, got 3 rows checked
PASS. Expected tests/data/junctions.tsv tsv.column.4.data.all not starts GENE, got 3 rows checked
PASS. Expected tests/data/size_5B.txt file.size not gt 1MB, got 5B
PASS. Expected tests/data/lines_10.txt file.lines not lt 10, got 10
PASS. Expected tests/data/empty_file.txt file.exists not eq false, got true
PASS. Expected tests/data/sample.bam bam.header.rg.0.sm not contains test, got NA12878
PASS. Expected tests/data/sample.fasta fasta.seq.0.name not starts chrUn, got chr1
PASS. Expected 'abc' text.value not contains z, got abc
PASS. Expected 'abc' text.length not gt 5, got 3
