tests/snapshots/run_subcommand_test__run_error_stderr.snap
---
source: tests/run_subcommand_test.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
ERROR. unknown metric: file.explode
