tests/snapshots/run_subcommand_test__run_error_stdout.snap
---
source: tests/run_subcommand_test.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
PASS. Expected tests/data/empty_file.txt file.exists == true, got true
